# Docker-e-redis

./: .gitignore  Dockerfile  READ.md  README.md  deployment.yaml  docker-compose.yml  logstash.conf  main.py  pyproject.toml  service.yaml
.github/workflows/: python-app.yml
tests/: test_main.py
