[project]
name = "api-assincrona"
version = "0.1.0"
description = "API de Livros com FastAPI e Redis"
authors = [
    {name = "Edson", email = "cryrider8@gmail.com"}
]
requires-python = ">=3.11"
dependencies = ["fastapi (>=0.136.3,<0.137.0)", "uvicorn (>=0.49.0,<0.50.0)", "redis (>=8.0.0,<9.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
